@@ -1,4 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.1.2' apply false
+id 'com.android.application' version '8.1.2' apply false
+}
+
+// For Powermockito compatibility with JDK17
+// https://groups.google.com/g/powermock/c/hLLVa3fn6BE
+subprojects{
+    tasks.withType(Test).configureEach{
+        jvmArgs = jvmArgs + ['--add-opens=java.base/java.lang=ALL-UNNAMED']
+        jvmArgs = jvmArgs + ['--add-opens=java.base/java.io=ALL-UNNAMED']
+        jvmArgs = jvmArgs + ['--add-opens=java.base/java.util=ALL-UNNAMED']
+        jvmArgs = jvmArgs + ['--add-opens=java.base/java.util.stream=ALL-UNNAMED']
+    }
 }
